# mouseModelPaper

./: .gitignore  README.md
LockBoxModel/: lb2.dae  lb2_combined.ply
dlc_mouse/: README_recreate_env.md  dlc_read_multicam_cli_flex.py  environment.yml  environment_dlc.yml  environment_dlc_tf_gpu.yml  post-setup.sh  predict_dlc_multi_mouse_batch.py  protocol.txt  recreate_environment.sh  train_dlc_multi_mouse.py  train_dlc_multi_mouse_engine.py
dlc_mouse_cleaning/: CMakeLists.txt  build.sh  protocol.txt
dlc_mouse_cleaning/python/: diagnose_frame.py  letterboxCheck.py  run_mouse3d.py  visualize_dlc_vs_reprojected3d_v3.py  visualize_dlc_vs_reprojected3d_v4.py
dlc_mouse_cleaning/python/mice3d/: __init__.py  cameras.py  dlc.py  geometry.py  pipeline.py  pipeline.pyMANUALLYFIXED  pipeline.pyOLD  segmentation.py  stage_a.py  stage_b.py
dlc_mouse_cleaning/src/: ceres_point_ba_module.cpp
gptChats/: DLCDataCleaningandTriangulation.txt  DebuggingStageAHypotheses.txt  DeepLearningMiceSegmentation.txt  Descript.3D-cluedlccleaning.txt  Descript.mousesimulator.txt  Mouse1.0DesignNotes.txt  MouseBehaviorfrom3DReconstructedPoints.txt  MousePathplusModelBundleAdjustment.txt  Mousesegmentationimprovement.txt  SegmentationVideoOutput.txt  SkeletonDataPreprocessing.txt  StageBDebugging.txt  TrainBehavior_DeepLabCut.txt  VideoSegmentationDebugging.txt
mouse_seg/: environment.yml  extract_only.py  manifest2.csv  mice_seg_v3_fullres.py  protocol.txt
mouse_sim/: environment.yml  environment_v0.yml  mouse.txt  mouse2.txt  mouse3_mesh.txt  mouseReal_mesh_shortTail.txt  mouse_deform_render_multi_swaprb.py  mouse_mesh_nodes.txt  mouse_sim.py  mouse_sim2.py  (+8 more)
mouseba/: CMakeLists.txt  README.md  build.sh  cameras.json  coords_3d_est.csv  coords_3d_pointsOnly.csv  environment_sam.yml  environment_v1.yml  mouse3_mesh_shortTail.txt  protocol.txt  run_example.sh
mouseba/python/: baPointsOnly.py  baPointsOnlyCeres.py  baWithPathModel_v5.py  baWithPathModel_v5_1.py  example_run.py  frontend.py  overlay_dlc_on_videos_v9_clean_frameNumbersVideo_aggstats.py
mouseba/src/: bspline.h  costs.h  mouse_ba_module.cpp  mouse_ba_module.cppbak  so3.h
(+4 files in other folders)
